Remove header border radius

--- a/pages/1demo.html
+++ b/pages/1demo.html
@@ -6,7 +6,7 @@ icon: glyphicon-play
 ---
 <div id="fall">
 
-	<!-- 第一列 -->
+	<!-- First Column -->
 	<ul>
 		<li>
 			<a href="http://gaohaoyang.github.io/ToDo-WebApp/">
@@ -60,7 +60,7 @@ icon: glyphicon-play
 		
 		
 	</ul>
-	<!-- 第二列 -->
+	<!-- Second Column -->
 	<ul>
 
 		<li>
