--- a/_posts/2017-02-05-animations-in-react-native.html
+++ b/_posts/2017-02-05-animations-in-react-native.html
@@ -15,7 +15,7 @@ permalink: :title/
   </p>
   <h2 id="demo">Demo</h2>
   <p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/usmXl_ASas8" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/fzffpTK9xNY" frameborder="0" allowfullscreen></iframe>
   </p>
   <h2 id="technologies">Technologies</h2>
   <p>
@@ -45,7 +45,6 @@ permalink: :title/
     </li>
   </ul>
   </p>
-
 
 </article>
 
